--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="background">
-    <img src="./imagems/portifolio.jpg" alt="" class="main-image">
+    <img src="./imagens/portifolio.jpg" alt="" class="main-image">
     <h1>Rodrigo Alves</h1>
   </div>
 </body>
