--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfólio Web</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <title>Portfólio Web</title>
+</head>
+
+<body>
+  <div class="header">
     <a href="#sobre-mim">Sobre mim</a>
     <a href="#pagina">Página que eu gosto</a>
-    <h1 class="my-name">Rodrigo Alves</h1>
-    <img src="./imagens/portfolio.jpg" alt="tryber sorrindo" class="main-image"/>
-    <h3 class="description">
-      Sou estudante de desenvolvimento Web na Trybe | Tecnico em Sistemas
-      Operativos
-    </h3>
-    <h3 class="resident">Brasileiro, Goiania - Goias</h3>
-    <h3>Lista de Habilidades</h3>
-    <ul>
-      <li>Responsavel</li>
-      <li>Organizado</li>
-      <li>Criativo</li>
-    </ul>
-    <a href="#minha-foto">Minha foto</a>
-    
-  </body>
+  </div>
+  
+  <h1 class="my-name">Rodrigo Alves</h1>
+  <img src="./imagens/portfolio.jpg" alt="tryber sorrindo" class="main-image" />
+  <h3 class="description">
+    Sou estudante de desenvolvimento Web na Trybe | Tecnico em Sistemas
+    Operativos
+  </h3>
+  <h3 class="resident">Brasileiro, Goiania - Goias</h3>
+  <h3>Lista de Habilidades</h3>
+  <ul>
+    <li>Responsavel</li>
+    <li>Organizado</li>
+    <li>Criativo</li>
+  </ul>
+  <a href="#minha-foto">Minha foto</a>
+
+</body>
+
 </html>
